lib/src/native/wrapper/wrapper.h



/* typedefs, enums & struct declaration from cronet. Derived from cronet.idl_c.h */

typedef const char* Cronet_String;

typedef struct Cronet_UrlRequest* Cronet_UrlRequestPtr;

typedef struct Cronet_QuicHint Cronet_QuicHint;

typedef struct Cronet_QuicHint* Cronet_QuicHintPtr;

typedef struct Cronet_EngineParams Cronet_EngineParams;

typedef struct Cronet_EngineParams* Cronet_EngineParamsPtr;

typedef struct Cronet_HttpHeader Cronet_HttpHeader;

typedef struct Cronet_HttpHeader* Cronet_HttpHeaderPtr;


typedef enum Cronet_EngineParams_HTTP_CACHE_MODE {
  Cronet_EngineParams_HTTP_CACHE_MODE_DISABLED = 0,
  Cronet_EngineParams_HTTP_CACHE_MODE_IN_MEMORY = 1,
  Cronet_EngineParams_HTTP_CACHE_MODE_DISK_NO_HTTP = 2,
  Cronet_EngineParams_HTTP_CACHE_MODE_DISK = 3,
} Cronet_EngineParams_HTTP_CACHE_MODE;

/* function signatures derived from cronet.idl_c.h. 
NOTE: Some are modified if required for wrapping */


///////////////////////
// Struct Cronet_QuicHint.
CRONET_EXPORT Cronet_QuicHintPtr Cronet_QuicHint_Create(void);

CRONET_EXPORT void Cronet_QuicHint_Destroy(Cronet_QuicHintPtr self);

// Cronet_QuicHint setters.
CRONET_EXPORT
void Cronet_QuicHint_host_set(Cronet_QuicHintPtr self,
                              const Cronet_String host);

CRONET_EXPORT
void Cronet_QuicHint_port_set(Cronet_QuicHintPtr self, const int32_t port);

CRONET_EXPORT
void Cronet_QuicHint_alternate_port_set(Cronet_QuicHintPtr self,
                                        const int32_t alternate_port);


CRONET_EXPORT Cronet_EngineParamsPtr Cronet_EngineParams_Create(void);

CRONET_EXPORT void Cronet_EngineParams_Destroy(Cronet_EngineParamsPtr self);


CRONET_EXPORT
void Cronet_EngineParams_user_agent_set(Cronet_EngineParamsPtr self,
                                        const Cronet_String user_agent);


CRONET_EXPORT
void Cronet_EngineParams_enable_quic_set(Cronet_EngineParamsPtr self,
                                         const bool enable_quic);


CRONET_EXPORT
void Cronet_EngineParams_quic_hints_add(Cronet_EngineParamsPtr self,
                                        const Cronet_QuicHintPtr element);


CRONET_EXPORT
void Cronet_EngineParams_accept_language_set(
    Cronet_EngineParamsPtr self,
    const Cronet_String accept_language);


CRONET_EXPORT
void Cronet_EngineParams_storage_path_set(Cronet_EngineParamsPtr self,
                                          const Cronet_String storage_path);


CRONET_EXPORT
void Cronet_EngineParams_enable_http2_set(Cronet_EngineParamsPtr self,
                                          const bool enable_http2);

CRONET_EXPORT
void Cronet_EngineParams_enable_brotli_set(Cronet_EngineParamsPtr self,
                                           const bool enable_brotli);

CRONET_EXPORT
void Cronet_EngineParams_http_cache_mode_set(
    Cronet_EngineParamsPtr self,
    const Cronet_EngineParams_HTTP_CACHE_MODE http_cache_mode);

CRONET_EXPORT
void Cronet_EngineParams_http_cache_max_size_set(
    Cronet_EngineParamsPtr self,
    const int64_t http_cache_max_size);


CRONET_EXPORT void Cronet_UrlRequest_Cancel(Cronet_UrlRequestPtr self);



CRONET_EXPORT Cronet_HttpHeaderPtr Cronet_HttpHeader_Create(void);

CRONET_EXPORT void Cronet_HttpHeader_Destroy(Cronet_HttpHeaderPtr self);

// Cronet_HttpHeader setters.
CRONET_EXPORT
void Cronet_HttpHeader_name_set(Cronet_HttpHeaderPtr self,
                                const Cronet_String name);

CRONET_EXPORT
void Cronet_HttpHeader_value_set(Cronet_HttpHeaderPtr self,
                                 const Cronet_String value);