third_party/cronet/cronet.idl_c.h

typedef struct Cronet_QuicHint Cronet_QuicHint;
typedef struct Cronet_EngineParams Cronet_EngineParams;
typedef struct Cronet_HttpHeader Cronet_HttpHeader;
// Cronet_EngineParams setters.
CRONET_EXPORT
void Cronet_EngineParams_enable_check_result_set(
    Cronet_EngineParamsPtr self,
    const bool enable_check_result);