lib/src/generated_bindings.dart


  late final _Cronet_UrlRequest_Cancel_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_UrlRequest_Cancel>>(
          'Cronet_UrlRequest_Cancel');
  late final _dart_Cronet_UrlRequest_Cancel _Cronet_UrlRequest_Cancel =
      _Cronet_UrlRequest_Cancel_ptr.asFunction<
          _dart_Cronet_UrlRequest_Cancel>();

  /// ////////////////////
  ffi.Pointer<Cronet_QuicHint> Cronet_QuicHint_Create() {
    return _Cronet_QuicHint_Create();
  }

  late final _Cronet_QuicHint_Create_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_QuicHint_Create>>(
          'Cronet_QuicHint_Create');
  late final _dart_Cronet_QuicHint_Create _Cronet_QuicHint_Create =
      _Cronet_QuicHint_Create_ptr.asFunction<_dart_Cronet_QuicHint_Create>();

  void Cronet_QuicHint_Destroy(
    ffi.Pointer<Cronet_QuicHint> self,
  ) {
    return _Cronet_QuicHint_Destroy(
      self,
    );
  }

  late final _Cronet_QuicHint_Destroy_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_QuicHint_Destroy>>(
          'Cronet_QuicHint_Destroy');
  late final _dart_Cronet_QuicHint_Destroy _Cronet_QuicHint_Destroy =
      _Cronet_QuicHint_Destroy_ptr.asFunction<_dart_Cronet_QuicHint_Destroy>();

  void Cronet_QuicHint_host_set(
    ffi.Pointer<Cronet_QuicHint> self,
    ffi.Pointer<ffi.Int8> host,
  ) {
    return _Cronet_QuicHint_host_set(
      self,
      host,
    );
  }

  late final _Cronet_QuicHint_host_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_QuicHint_host_set>>(
          'Cronet_QuicHint_host_set');
  late final _dart_Cronet_QuicHint_host_set _Cronet_QuicHint_host_set =
      _Cronet_QuicHint_host_set_ptr.asFunction<
          _dart_Cronet_QuicHint_host_set>();

  void Cronet_QuicHint_port_set(
    ffi.Pointer<Cronet_QuicHint> self,
    int port,
  ) {
    return _Cronet_QuicHint_port_set(
      self,
      port,
    );
  }

  late final _Cronet_QuicHint_port_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_QuicHint_port_set>>(
          'Cronet_QuicHint_port_set');
  late final _dart_Cronet_QuicHint_port_set _Cronet_QuicHint_port_set =
      _Cronet_QuicHint_port_set_ptr.asFunction<
          _dart_Cronet_QuicHint_port_set>();

  void Cronet_QuicHint_alternate_port_set(
    ffi.Pointer<Cronet_QuicHint> self,
    int alternate_port,
  ) {
    return _Cronet_QuicHint_alternate_port_set(
      self,
      alternate_port,
    );
  }

  late final _Cronet_QuicHint_alternate_port_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_QuicHint_alternate_port_set>>(
          'Cronet_QuicHint_alternate_port_set');
  late final _dart_Cronet_QuicHint_alternate_port_set
      _Cronet_QuicHint_alternate_port_set =
      _Cronet_QuicHint_alternate_port_set_ptr.asFunction<
          _dart_Cronet_QuicHint_alternate_port_set>();

  /// ////////////////////
  ffi.Pointer<Cronet_EngineParams> Cronet_EngineParams_Create() {
    return _Cronet_EngineParams_Create();
  }

  late final _Cronet_EngineParams_Create_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_Create>>(
          'Cronet_EngineParams_Create');
  late final _dart_Cronet_EngineParams_Create _Cronet_EngineParams_Create =
      _Cronet_EngineParams_Create_ptr.asFunction<
          _dart_Cronet_EngineParams_Create>();

  void Cronet_EngineParams_Destroy(
    ffi.Pointer<Cronet_EngineParams> self,
  ) {
    return _Cronet_EngineParams_Destroy(
      self,
    );
  }

  late final _Cronet_EngineParams_Destroy_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_Destroy>>(
          'Cronet_EngineParams_Destroy');
  late final _dart_Cronet_EngineParams_Destroy _Cronet_EngineParams_Destroy =
      _Cronet_EngineParams_Destroy_ptr.asFunction<
          _dart_Cronet_EngineParams_Destroy>();

  void Cronet_EngineParams_enable_check_result_set(
    ffi.Pointer<Cronet_EngineParams> self,
    bool enable_check_result,
  ) {
    return _Cronet_EngineParams_enable_check_result_set(
      self,
      enable_check_result ? 1 : 0,
    );
  }

  late final _Cronet_EngineParams_enable_check_result_set_ptr = _lookup<
          ffi.NativeFunction<_c_Cronet_EngineParams_enable_check_result_set>>(
      'Cronet_EngineParams_enable_check_result_set');
  late final _dart_Cronet_EngineParams_enable_check_result_set
      _Cronet_EngineParams_enable_check_result_set =
      _Cronet_EngineParams_enable_check_result_set_ptr.asFunction<
          _dart_Cronet_EngineParams_enable_check_result_set>();

  void Cronet_EngineParams_user_agent_set(
    ffi.Pointer<Cronet_EngineParams> self,
    ffi.Pointer<ffi.Int8> user_agent,
  ) {
    return _Cronet_EngineParams_user_agent_set(
      self,
      user_agent,
    );
  }

  late final _Cronet_EngineParams_user_agent_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_user_agent_set>>(
          'Cronet_EngineParams_user_agent_set');
  late final _dart_Cronet_EngineParams_user_agent_set
      _Cronet_EngineParams_user_agent_set =
      _Cronet_EngineParams_user_agent_set_ptr.asFunction<
          _dart_Cronet_EngineParams_user_agent_set>();

  void Cronet_EngineParams_accept_language_set(
    ffi.Pointer<Cronet_EngineParams> self,
    ffi.Pointer<ffi.Int8> accept_language,
  ) {
    return _Cronet_EngineParams_accept_language_set(
      self,
      accept_language,
    );
  }

  late final _Cronet_EngineParams_accept_language_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_accept_language_set>>(
          'Cronet_EngineParams_accept_language_set');
  late final _dart_Cronet_EngineParams_accept_language_set
      _Cronet_EngineParams_accept_language_set =
      _Cronet_EngineParams_accept_language_set_ptr.asFunction<
          _dart_Cronet_EngineParams_accept_language_set>();

  void Cronet_EngineParams_storage_path_set(
    ffi.Pointer<Cronet_EngineParams> self,
    ffi.Pointer<ffi.Int8> storage_path,
  ) {
    return _Cronet_EngineParams_storage_path_set(
      self,
      storage_path,
    );
  }

  late final _Cronet_EngineParams_storage_path_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_storage_path_set>>(
          'Cronet_EngineParams_storage_path_set');
  late final _dart_Cronet_EngineParams_storage_path_set
      _Cronet_EngineParams_storage_path_set =
      _Cronet_EngineParams_storage_path_set_ptr.asFunction<
          _dart_Cronet_EngineParams_storage_path_set>();

  void Cronet_EngineParams_enable_quic_set(
    ffi.Pointer<Cronet_EngineParams> self,
    bool enable_quic,
  ) {
    return _Cronet_EngineParams_enable_quic_set(
      self,
      enable_quic ? 1 : 0,
    );
  }

  late final _Cronet_EngineParams_enable_quic_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_enable_quic_set>>(
          'Cronet_EngineParams_enable_quic_set');
  late final _dart_Cronet_EngineParams_enable_quic_set
      _Cronet_EngineParams_enable_quic_set =
      _Cronet_EngineParams_enable_quic_set_ptr.asFunction<
          _dart_Cronet_EngineParams_enable_quic_set>();

  void Cronet_EngineParams_enable_http2_set(
    ffi.Pointer<Cronet_EngineParams> self,
    bool enable_http2,
  ) {
    return _Cronet_EngineParams_enable_http2_set(
      self,
      enable_http2 ? 1 : 0,
    );
  }

  late final _Cronet_EngineParams_enable_http2_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_enable_http2_set>>(
          'Cronet_EngineParams_enable_http2_set');
  late final _dart_Cronet_EngineParams_enable_http2_set
      _Cronet_EngineParams_enable_http2_set =
      _Cronet_EngineParams_enable_http2_set_ptr.asFunction<
          _dart_Cronet_EngineParams_enable_http2_set>();

  void Cronet_EngineParams_enable_brotli_set(
    ffi.Pointer<Cronet_EngineParams> self,
    bool enable_brotli,
  ) {
    return _Cronet_EngineParams_enable_brotli_set(
      self,
      enable_brotli ? 1 : 0,
    );
  }

  late final _Cronet_EngineParams_enable_brotli_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_enable_brotli_set>>(
          'Cronet_EngineParams_enable_brotli_set');
  late final _dart_Cronet_EngineParams_enable_brotli_set
      _Cronet_EngineParams_enable_brotli_set =
      _Cronet_EngineParams_enable_brotli_set_ptr.asFunction<
          _dart_Cronet_EngineParams_enable_brotli_set>();

  void Cronet_EngineParams_http_cache_mode_set(
    ffi.Pointer<Cronet_EngineParams> self,
    int http_cache_mode,
  ) {
    return _Cronet_EngineParams_http_cache_mode_set(
      self,
      http_cache_mode,
    );
  }

  late final _Cronet_EngineParams_http_cache_mode_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_http_cache_mode_set>>(
          'Cronet_EngineParams_http_cache_mode_set');
  late final _dart_Cronet_EngineParams_http_cache_mode_set
      _Cronet_EngineParams_http_cache_mode_set =
      _Cronet_EngineParams_http_cache_mode_set_ptr.asFunction<
          _dart_Cronet_EngineParams_http_cache_mode_set>();

  void Cronet_EngineParams_http_cache_max_size_set(
    ffi.Pointer<Cronet_EngineParams> self,
    int http_cache_max_size,
  ) {
    return _Cronet_EngineParams_http_cache_max_size_set(
      self,
      http_cache_max_size,
    );
  }

  late final _Cronet_EngineParams_http_cache_max_size_set_ptr = _lookup<
          ffi.NativeFunction<_c_Cronet_EngineParams_http_cache_max_size_set>>(
      'Cronet_EngineParams_http_cache_max_size_set');
  late final _dart_Cronet_EngineParams_http_cache_max_size_set
      _Cronet_EngineParams_http_cache_max_size_set =
      _Cronet_EngineParams_http_cache_max_size_set_ptr.asFunction<
          _dart_Cronet_EngineParams_http_cache_max_size_set>();

  void Cronet_EngineParams_quic_hints_add(
    ffi.Pointer<Cronet_EngineParams> self,
    ffi.Pointer<Cronet_QuicHint> element,
  ) {
    return _Cronet_EngineParams_quic_hints_add(
      self,
      element,
    );
  }

  late final _Cronet_EngineParams_quic_hints_add_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_quic_hints_add>>(
          'Cronet_EngineParams_quic_hints_add');
  late final _dart_Cronet_EngineParams_quic_hints_add
      _Cronet_EngineParams_quic_hints_add =
      _Cronet_EngineParams_quic_hints_add_ptr.asFunction<
          _dart_Cronet_EngineParams_quic_hints_add>();

  /// ////////////////////
  ffi.Pointer<Cronet_HttpHeader> Cronet_HttpHeader_Create() {
    return _Cronet_HttpHeader_Create();
  }

  late final _Cronet_HttpHeader_Create_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_HttpHeader_Create>>(
          'Cronet_HttpHeader_Create');
  late final _dart_Cronet_HttpHeader_Create _Cronet_HttpHeader_Create =
      _Cronet_HttpHeader_Create_ptr.asFunction<
          _dart_Cronet_HttpHeader_Create>();

  void Cronet_HttpHeader_Destroy(
    ffi.Pointer<Cronet_HttpHeader> self,
  ) {
    return _Cronet_HttpHeader_Destroy(
      self,
    );
  }

  late final _Cronet_HttpHeader_Destroy_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_HttpHeader_Destroy>>(
          'Cronet_HttpHeader_Destroy');
  late final _dart_Cronet_HttpHeader_Destroy _Cronet_HttpHeader_Destroy =
      _Cronet_HttpHeader_Destroy_ptr.asFunction<
          _dart_Cronet_HttpHeader_Destroy>();

  void Cronet_HttpHeader_name_set(
    ffi.Pointer<Cronet_HttpHeader> self,
    ffi.Pointer<ffi.Int8> name,
  ) {
    return _Cronet_HttpHeader_name_set(
      self,
      name,
    );
  }

  late final _Cronet_HttpHeader_name_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_HttpHeader_name_set>>(
          'Cronet_HttpHeader_name_set');
  late final _dart_Cronet_HttpHeader_name_set _Cronet_HttpHeader_name_set =
      _Cronet_HttpHeader_name_set_ptr.asFunction<
          _dart_Cronet_HttpHeader_name_set>();

  void Cronet_HttpHeader_value_set(
    ffi.Pointer<Cronet_HttpHeader> self,
    ffi.Pointer<ffi.Int8> value,
  ) {
    return _Cronet_HttpHeader_value_set(
      self,
      value,
    );
  }
